// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiagnosisSearch > RTL support > matches LTR snapshot 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-3"
    >
      <h3
        class="text-2xl font-black tracking-tight text-neutral-900"
      >
        Diagnosis
      </h3>
      <div
        aria-label="Diagnosis rank"
        class="flex gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="rounded-lg px-4 py-2 text-sm font-semibold transition-colors bg-primary-600 text-white"
          role="radio"
          type="button"
        >
          Primary
        </button>
        <button
          aria-checked="false"
          class="rounded-lg px-4 py-2 text-sm font-semibold transition-colors bg-neutral-100 text-neutral-600 hover:bg-neutral-200"
          role="radio"
          type="button"
        >
          Secondary
        </button>
      </div>
      <div
        class="relative"
      >
        <input
          aria-controls="diagnosis-results"
          aria-expanded="false"
          aria-label="Search diagnoses"
          class="w-full rounded-lg border border-neutral-200 bg-white px-4 py-3 text-base text-neutral-900 placeholder:text-neutral-400 transition-colors focus:outline-none focus:ring-2 focus:border-primary-400 focus:ring-primary-200 disabled:opacity-50 disabled:cursor-not-allowed"
          placeholder="Search ICD-10 code or diagnosis name..."
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DiagnosisSearch > RTL support > matches RTL snapshot 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-3"
    >
      <h3
        class="text-2xl font-black tracking-tight text-neutral-900"
      >
        Diagnosis
      </h3>
      <div
        aria-label="Diagnosis rank"
        class="flex gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="rounded-lg px-4 py-2 text-sm font-semibold transition-colors bg-primary-600 text-white"
          role="radio"
          type="button"
        >
          Primary
        </button>
        <button
          aria-checked="false"
          class="rounded-lg px-4 py-2 text-sm font-semibold transition-colors bg-neutral-100 text-neutral-600 hover:bg-neutral-200"
          role="radio"
          type="button"
        >
          Secondary
        </button>
      </div>
      <div
        class="relative"
      >
        <input
          aria-controls="diagnosis-results"
          aria-expanded="false"
          aria-label="Search diagnoses"
          class="w-full rounded-lg border border-neutral-200 bg-white px-4 py-3 text-base text-neutral-900 placeholder:text-neutral-400 transition-colors focus:outline-none focus:ring-2 focus:border-primary-400 focus:ring-primary-200 disabled:opacity-50 disabled:cursor-not-allowed"
          placeholder="Search ICD-10 code or diagnosis name..."
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
